# trailscan

./: .gitignore  README.md  pyproject.toml
trailscan/: cli.py
trailscan/checks/: __init__.py
trailscan/checks/cloudtrail/: __init__.py  cloudwatch_integration.py  enabled.py  kms_encryption.py  log_validation.py  s3_bucket_logging.py
trailscan/checks/cloudwatch/: __init__.py  _helpers.py  iam_changes_alarm.py  root_usage_alarm.py  unauthorized_api_alarm.py
trailscan/checks/ec2/: __init__.py  ebs_encryption.py  imds_v2.py  public_snapshots.py  security_groups.py  stopped_instances.py
trailscan/checks/guardduty/: __init__.py  enabled.py
trailscan/checks/iam/: __init__.py  access_key_rotation.py  cross_account_access.py  mfa_enabled.py  overly_permissive_policies.py  password_policy.py  root_account_usage.py  unused_credentials.py
trailscan/checks/kms/: __init__.py  key_rotation.py
trailscan/checks/rds/: __init__.py  backup_retention.py  deletion_protection.py  publicly_accessible.py  storage_encrypted.py
trailscan/checks/s3/: __init__.py  bucket_acl.py  bucket_encryption.py  bucket_logging.py  bucket_policy.py  bucket_versioning.py  public_access_block.py
trailscan/checks/vpc/: __init__.py  flow_logs.py
trailscan/engine/: base.py  models.py  runner.py
trailscan/output/: exporters.py  terminal.py
